apps/src/componentLibrary/tabs/tabs.module.scss
@import 'color';
@import 'font';
@import "@cdo/apps/componentLibrary/common/styles/mixins";

.tabs {
  ul {
    display: inline-flex;
    align-items: flex-start;
    margin: 0;
    padding: 0;
    position: relative;

    &::after {
      // Adds a border to the bottom of the tabs
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      height: 1px;
      z-index: -1;
      border-bottom: 1px solid black;
    }

    li {
      list-style: none;
      margin: 0;
      padding: 0;
    }
  }

  button {
    display: flex;
    justify-content: center;

    margin: 0;
    padding: 0;
    border: none;

    &:hover {
      box-shadow: none;
    }
  }

}

// Tabs Colors
.tabs-primary {
  li button {
    align-items: baseline;
    background-color: transparent;
    border-radius: 0;
  }

  &.tabs-light {

    ul::after {
      border-color: $light_gray_200;
    }

    li button {
      color: $light_gray_800;


      &:hover {
        color: $light_primary_500;
        border: none;
        border-bottom: 2px solid $light_primary_500;
      }

      &:focus-visible {
        color: $light_primary_500;
        outline: 2px solid $light_primary_500;
      }

      &:active:not(:disabled) {
        color: $light_black;
        border: none !important;
        border-bottom: 2px solid $light_primary_500 !important;
      }

      &.selectedTab {
        color: $light_black;
        border-bottom: 2px solid $light_primary_500;
      }

      &:disabled {
        cursor: not-allowed;
        color: $light_gray_200;
        border: none !important;
      }
    }
  }

  &.tabs-dark {
    ul::after {
      border-color: $light_gray_800;
    }

    li button {
      color: $light_gray_200;


      &:hover {
        color: $light_white;
        border: none;
        border-bottom: 2px solid $light_primary_500;
      }

      &:focus-visible {
        color: $light_white;
        outline: 2px solid $light_primary_500;
      }

      &:active:not(:disabled) {
        color: $light_white;
        border: none !important;
        border-bottom: 2px solid $light_primary_500 !important;
      }

      &.selectedTab {
        color: $light_white;
        border-bottom: 2px solid $light_primary_500;
      }

      &:disabled {
        cursor: not-allowed;
        color: $light_gray_800;
        border: none !important;
      }
    }
  }
}

.tabs-secondary {
  li button {
    align-items: center;
    border-radius: 0.25rem 0.25rem 0 0;
  }

  &.tabs-light {
    ul::after {
      border-color: $light_gray_200;
    }

    li button {
      color: $light_gray_800;
      background-color: $light_gray_50;
      border: 1px solid $light_gray_200;

      &:hover {
        color: $light_white;
        background-color: $light_primary_500;
        border-color: transparent;
        border-bottom: 1px solid $light_gray_200;
      }

      &:focus-visible {
        color: $light_white;
        background-color: $light_primary_500;
        border-color: transparent;
        border-bottom-color: $light_gray_200;
        outline: 2px solid $light_primary_500;
        outline-offset: 2px;
      }

      &:active:not(:disabled) {
        color: $light_primary_500;
        background-color: $light_white;
        border: 1px solid $light_gray_200 !important;
        border-bottom-color: transparent !important;
      }

      &.selectedTab {
        color: $light_primary_500;
        background-color: $light_white;
        border: 1px solid $light_gray_200;
        border-bottom-color: transparent;
      }

      &:disabled {
        cursor: not-allowed;
        color: $light_white;
        background-color: $light_gray_50;
        border: 1px solid $light_gray_200;
      }
    }
  }

  &.tabs-dark {
    ul::after {
      border-color: $light_gray_800;
    }

    li button {
      color: $light_gray_200;
      background-color: $light_gray_950;
      border: 1px solid $light_gray_800;

      &:hover {
        color: $light_white;
        background-color: $light_primary_500;
        border-color: transparent;
        border-bottom: 1px solid $light_gray_800;
      }

      &:focus-visible {
        color: $light_white;
        background-color: $light_primary_500;
        border-color: transparent;
        border-bottom-color: $light_gray_800;
        outline: 2px solid $light_primary_500;
        outline-offset: 2px;
      }

      &:active:not(:disabled) {
        color: $light_white;
        background-color: $light_black;
        border: 1px solid $light_gray_800 !important;
        border-bottom-color: transparent !important;
      }

      &.selectedTab {
        color: $light_white;
        background-color: $light_black;
        border: 1px solid $light_gray_800;
        border-bottom-color: transparent;
      }

      &:disabled {
        cursor: not-allowed;
        color: $light_gray_800;
        background-color: $light_gray_950;
        border: 1px solid $light_gray_800;
      }
    }

  }
}

// Tabs Sizes
.tabs-l {
  &.tabs-primary {
    i {
      font-size: 1.125rem;
      line-height: 125%;
      width: 1.5rem;
      height: 1.5rem;
    }

    ul {
      gap: 1rem;

      li button {
        @include button-one-text;
        margin: 0;
        padding: 0.625rem 0;
        gap: 0.5rem;

        &.iconOnlyTab {
          padding: 0.75rem 1rem;
        }
      }
    }
  }

  &.tabs-secondary {
    i {
      font-size: 1rem;
      line-height: 125%;
      width: 1.25rem;
    }

    ul {
      gap: 0.25rem;

      li button {
        @include label-one;
        margin: 0;
        padding: 0 0.75rem;
        gap: 0.375rem;
        height: 2rem;

        &:has(i:first-child) {
          padding-inline-start: 0.625rem;
        }

        &:has(i:last-child) {
          padding-inline-end: 0.625rem;
        }

        &.iconOnlyTab {
          padding: 0 0.625rem;
        }

        span {
          margin: 1px 0 0;
        }
      }
    }
  }

}

.tabs-m {
  &.tabs-primary {
    i {
      font-size: 1rem;
      line-height: 125%;
      width: 1.25rem;
    }

    ul {
      gap: 1rem;

      li button {
        @include button-two-text;
        margin: 0;
        padding: 0.5rem 0;
        gap: 0.5rem;

        &.iconOnlyTab {
          padding: 0.625rem 1rem;
        }
      }
    }
  }

  &.tabs-secondary {
    i {
      font-size: 0.875rem;
      line-height: 125%;
      width: 1.125rem;
    }

    ul {
      gap: 0.25rem;

      li button {
        @include label-two;
        margin: 0;
        padding: 0 0.75rem;
        gap: 0.375rem;
        height: 1.75rem;

        &:has(i:first-child) {
          padding-inline-start: 0.625rem;
        }

        &:has(i:last-child) {
          padding-inline-end: 0.625rem;
        }

        &.iconOnlyTab {
          padding: 0 0.625rem;
        }

        span {
          margin: 1px 0 0;
        }
      }
    }
  }
}

.tabs-s {
  &.tabs-primary {
    i {
      font-size: 0.875rem;
      line-height: 125%;
      width: 1.125rem;
    }

    ul {
      gap: 1rem;

      li button {
        @include button-three-text;
        margin: 0;
        padding: 0.3125rem 0;
        gap: 0.375rem;

        &.iconOnlyTab {
          padding: 0.4375rem 1rem;
        }
      }
    }
  }

  &.tabs-secondary {
    i {
      font-size: 0.75rem;
      line-height: 125%;
      width: 0.9375rem;
    }

    ul {
      gap: 0.125rem;

      li button {
        @include label-three;
        margin: 0;
        padding: 0 0.625rem;
        gap: 0.25rem;
        height: 1.5rem;

        &:has(i:first-child) {
          padding-inline-start: 0.5rem;
        }

        &:has(i:last-child) {
          padding-inline-end: 0.5rem;
        }

        &.iconOnlyTab {
          padding: 0 0.5rem;
        }

        span {
          margin: 1px 0 0;
        }
      }
    }
  }
}

.tabs-xs {
  &.tabs-primary {
    i {
      font-size: 0.75rem;
      line-height: 125%;
      width: 1rem;
      height: 1rem;
    }

    ul {
      gap: 0.5rem;

      li button {
        @include button-four-text;
        margin: 0;
        padding: 0.0625rem 0;
        gap: 0.375rem;

        &.iconOnlyTab {
          padding: 0.25rem 0.5rem;
        }
      }
    }
  }

  &.tabs-secondary {
    i {
      font-size: 0.625rem;
      line-height: 125%;
      width: 0.8125rem;
    }

    ul {
      gap: 0.125rem;

      li button {
        @include label-four;
        margin: 0;
        padding: 0 0.5rem;
        gap: 0.25rem;
        height: 1.25rem;

        &:has(i:first-child) {
          padding-inline-start: 0.4375rem;
        }

        &:has(i:last-child) {
          padding-inline-end: 0.4375rem;
        }

        &.iconOnlyTab {
          padding: 0 0.4375rem;
        }

        span {
          margin: 1px 0 0;
        }
      }
    }
  }
}

